--- a/Ansible/playbook.yaml
+++ b/Ansible/playbook.yaml
@@ -36,7 +36,7 @@
         state: latest
 #    - name: Copy private key to Jenkins folder
 #      copy:
-#        src: "{{ playbook_dir }}/sfia3.pem"
+#        src: "{{ playbook_dir }}/final_project.pem"
 #        dest: /var/lib/jenkins/.ssh/id_rsa
 #        owner: jenkins
 #        group: jenkins
