--- a/Ansible_RC/playbook.yaml
+++ b/Ansible_RC/playbook.yaml
@@ -19,17 +19,19 @@
         - docker.io
         - docker-compose
         - mysql-client
-    - name: Install mysql lib
-      pip:
-        name: "{{ item }}"
-      loop:
-        - awscli
-        - PyMySQL
-    - name: Install kubectl 1.17
-      shell: |
-        curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.17.9/2020-08-04/bin/linux/amd64/kubectl
-        chmod +x kubectl
-        mv kubectl /usr/local/bin/
+    # - name: Install mysql lib
+    #   pip:
+    #     name: "{{ item }}"
+    #   loop:
+    #     - awscli
+    #     - PyMySQL
+
+    # - name: Install kubectl 1.17
+    #   shell: |
+    #     curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.17.9/2020-08-04/bin/linux/amd64/kubectl
+    #     chmod +x kubectl
+    #     mv kubectl /usr/local/bin/
+    
     - name: Install Jenkins
       apt:
         name: jenkins
