--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,6 @@
-#spring.datasource.url=jdbc:mysql://34.105.158.26:3306/fantasydb
-#spring.datasource.url=jdbc:mysql://mysql:3306/fantasydb
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://database-1.c4ytirzx9dif.us-east-2.rds.amazonaws.com:3306/tickets
+spring.datasource.username=admin
+spring.datasource.password=password
