--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-<!--        <dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
-       </dependency>-->
+       </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
