--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://terraform-20201110143312013300000001.c4eh2iwfvpf9.us-west-2.rds.amazonaws.com:3306/tickets
 spring.datasource.username=admin
